# grimori-mesh-gen

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
frontend/: CMakeLists.txt  main.cpp
include/: gltfparser.hpp  meshoperations.hpp  meshparser.hpp  meshpostprocessor.hpp  meshreader.hpp  meshwriter.hpp  types.hpp
include/gmesh/: meshreader.hpp  meshwriter.hpp
src/: gltfparser.cpp  meshoperations.cpp  meshpostprocessor.cpp  meshreader.cpp  meshwriter.cpp
